// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spacing /> renders as inline 1`] = `
<div
  className="outerTop_2-0-2-33 outerBottom_2-0-2-37 spacing_inline-0-2-201"
>
  Content
</div>
`;

exports[`<Spacing /> renders with a side 1`] = `
<div
  className="outerTop_1-0-2-17"
>
  Content
</div>
`;

exports[`<Spacing /> renders with many sides 1`] = `
<div
  className="outerTop_1-0-2-17 outerBottom_3-0-2-53 outerLeft_2-0-2-39 outerRight_4-0-2-67"
>
  Content
</div>
`;

exports[`<Spacing /> renders with padding 1`] = `
<div
  className="innerTop_2-0-2-34 innerRight_2-0-2-36 innerBottom_2-0-2-38 innerLeft_2-0-2-40"
>
  Content
</div>
`;
